made the html_ layed out slightly first page in css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
+    <title>Portfolio Home</title>
+</head>
+<body>
+    
+<div class="container1">
+<div class="containerCover1">
+    <!--  -->
+
+<div class="firstName">
+Destin
+</div>
+<div class="lastName">
+Floyd
+</div>
+</div><!-- end of container cover 1 -->
+<div class="containerCover2">
+
+<div class="about">
+About
+</div>
+<div class="projects">
+Projects
+</div>
+<div class="random">
+    Randomly(AKA Javascriptly) Selected Project
+</div>
+<div class="contact">
+Contact Me
+</div>
+
+</div><!-- end of container cover 2 -->
+
+
+
+</div><!-- end of container -->
+</body>
+</html>
