nothing too much just stating JS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Floyd
 <div class="about">
 About
 </div>
-<div class="projects">
+<div id="projects"  onclick="moveAround1()">
 Projects
 </div>
 <div class="random">
@@ -40,5 +40,6 @@ Contact Me
 
 
 </div><!-- end of container -->
+<script src="app.js"></script>
 </body>
 </html>
