designed page 4 Projects

--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@ Floyd
 </div><!-- end of container cover 1 -->
 <div class="containerCover2">
 
-<div class="about">
-About
+<div id="about">
+    <a href="/pages/about2.html">About</a>
 </div>
+
 <div id="projects"  onclick="moveAround1()">
-Projects
+<a href="/pages/projects4.html">Projects</a>
 </div>
-<div class="random">
-    R
+
+<div id="random">
+    <!-- will be a JS function to random project one day -->
 </div>
-<div class="contact">
-Contact Me
+
+<div id="contact">
+    <a href="/pages/contact3.html">Contact Me</a>
 </div>
 
 </div><!-- end of container cover 2 -->
-
-
 
 </div><!-- end of container -->
 <script src="app.js"></script>
