finished page 4 projects layout and design for now

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ Floyd
 <div class="containerCover2">
 
 <div id="about">
-    <a href="/pages/about2.html">About</a>
+    <a href="/pages/about2.html" class="page1Links">About</a>
 </div>
 
 <div id="projects"  onclick="moveAround1()">
-<a href="/pages/projects4.html">Projects</a>
+<a href="/pages/projects4.html" class="page1Links">Projects</a>
 </div>
 
 <div id="random">
@@ -35,7 +35,7 @@ Floyd
 </div>
 
 <div id="contact">
-    <a href="/pages/contact3.html">Contact Me</a>
+    <a href="/pages/contact3.html" class="page1Links">Contact Me</a>
 </div>
 
 </div><!-- end of container cover 2 -->
