--- a/pages/contact3.html
+++ b/pages/contact3.html
@@ -9,12 +9,28 @@
 </head>
 <body>
         <div class="container3">
+            
+<main class="main3">
+        
+                <div class="text3">
+                I look forward to hearing from you!
+                </div>    
+</main>
+
+<div class="contactsBox">
+
+<div class="contactsCover" id="contacts1"><a href="https://www.linkedin.com/in/destin-foyd-808463176/">
+<img src="/images/linkedinIcon.png" height="20%" width="20%" alt="Linked In Icon" class="contactsOn3" ></a>
+</div>
+<div class="contactsCover" id="contacts2"><a href="https://github.com/DestinFloyd">
+<img src="/images/gitHubIcon.png" height="20%" width="20%" alt="Git Hub Icon" class="contactsOn3"></a>
+</div>
 
 
+</div><!-- end of contactsBox -->
 
 
-
-            </div><!-- end of container3 -->
+   </div><!-- end of container3 -->
 
 
 </body>
