--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,10 +14,21 @@
 
 
 <div class="firstName">
-Destin
+    <div>D</div>
+    <div>e</div>
+    <div>s</div>
+    <div>t</div>
+    <div>i</div>
+    <div>n</div>
+<!-- Destin -->
 </div>
 <div class="lastName">
-Floyd
+        <div>F</div>
+        <div>l</div>
+        <div>o</div>
+        <div>y</div>
+        <div>d</div>
+<!-- Floyd -->
 </div>
 </div><!-- end of container cover 1 -->
 <div class="containerCover2">
