added projects and links to projects page

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -37,7 +37,7 @@
     <a href="/pages/about2.html" class="page1Links">About</a>
 </div>
 
-<div id="projects"  onclick="moveAround1()">
+<div id="projects">
 <a href="/pages/projects4.html" class="page1Links">Projects</a>
 </div>
 
