--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,39 +14,29 @@
 
 
 <div class="firstName">
-    <div>D</div>
-    <div>e</div>
-    <div>s</div>
-    <div>t</div>
-    <div>i</div>
-    <div>n</div>
-<!-- Destin -->
+Destin
 </div>
 <div class="lastName">
-        <div>F</div>
-        <div>l</div>
-        <div>o</div>
-        <div>y</div>
-        <div>d</div>
-<!-- Floyd -->
+Floyd
 </div>
+
 </div><!-- end of container cover 1 -->
 <div class="containerCover2">
-
+ 
 <div id="about">
-    <a href="/pages/about2.html" class="page1Links">About</a>
+    <a href="pages/about2.html" class="page1Links">About</a>
 </div>
 
 <div id="projects">
-<a href="/pages/projects4.html" class="page1Links">Projects</a>
+<a href="pages/projects4.html" class="page1Links">Projects</a>
 </div>
 
-<div id="random">
-    <!-- will be a JS function to random project one day -->
-</div>
+<!-- <div id="random">
+     will be a JS function to random project one day 
+</div> -->
 
 <div id="contact">
-    <a href="/pages/contact3.html" class="page1Links">Contact Me</a>
+    <a href="pages/contact3.html" class="page1Links">Contact Me</a>
 </div>
 
 
