--- a/Portfolio/pages/contact3.html
+++ b/Portfolio/pages/contact3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +8,19 @@
     <link rel="stylesheet" href="../main.css">
     <title>Contact</title>
 </head>
+
 <body>
-        <div class="container3">
-            
-<main class="main3">
-        
-                <div class="text3">
-                I look forward to hearing from you!
-                </div>    
-</main>
-
-<div class="contactsBox">
-
-<div class="contactsCover" id="contacts1"><a href="https://www.linkedin.com/in/destin-foyd-808463176/">
-<img src="/images/linkedinIcon.png" height="20%" width="20%" alt="Linked In Icon" class="contactsOn3" ></a>
-</div>
-<div class="contactsCover" id="contacts2"><a href="https://github.com/DestinFloyd">
-<img src="/images/gitHubIcon.png" height="20%" width="20%" alt="Git Hub Icon" class="contactsOn3"></a>
-</div>
+    <div class="container3">
+<p>Hello, thanks for viewing my portfolio. If you would like to get in touch with me: </p>
+        <div> <a href="https://www.linkedin.com/in/destin-floyd-808463176/ ">Linkedin </a></div>
+        <div> <a href="https://github.com/DestinFloyd"> GitHub</a></div>
+        <!-- <div> PDF OF RESUME.... </div> -->
 
 
-</div><!-- end of contactsBox -->
 
-
-   </div><!-- end of container3 -->
+    </div><!-- end of container3 -->
 
 
 </body>
+
 </html>
