edited about me

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div onclick="openAbout()" class="pageLinks" id="aboutLink">About</div>
             </div>
             <div id="aboutHideaway">
-                <div onclick="closeAbout()"> X</div>
-                <p>Hello, Im Destin, a firefighter turned programmer with a passion for helping and yadddashhhh </p>
+                <div onclick="closeAbout()"> </div>
+                <!-- <p>Hello, Im Destin, a firefighter turned programmer with a passion for helping and yadddashhhh </p> -->
 
             </div>
         </div>
@@ -46,17 +46,22 @@
                     <div onclick="openInfo()" class="pageLinks" id="contactLink">Contact Me</div>
                 </div>
                 <div id="contactHideaway">
-                    <div onclick="closeInfo()"> X</div>
-                    <p>Hello, thanks for viewing my portfolio. Contact Me on <a id='linkedinLink' href="https://www.linkedin.com/in/destin-floyd-808463176/ ">
-                            Linkedin</a> or Destin.B.Floyd@gmail.com</p>
+                    <!-- <div onclick="closeInfo()"> </div>
+                     <p>Hello, thanks for viewing my portfolio. Contact Me on <a id='linkedinLink' href="https://www.linkedin.com/in/destin-floyd-808463176/ ">
+                            Linkedin</a> or Destin.B.Floyd@gmail.com</p> 
 
-                </div>
+                </div> -->
 
             </div>
 
 
 
         </div><!-- end of container cover 2 -->
+        <div class="textHolder">
+        <div class="aboutText"> About Me: I'm a full stack programmer known for my creativity and upbeat attitude. My passions are logic and functionality because they save people time and companies resources. I previously was a firefighter and a paramedic which helped me increase my attention to detail, communication skills, and comfort in high stress environments. I enjoy programming because of the sense of accomplishment that comes with a job well done. </div>
+        <div class="contactText">Contact Me: on <a id='linkedinLink' href="https://www.linkedin.com/in/destin-floyd-808463176/ ">
+            Linkedin</a> or Destin.B.Floyd@gmail.com </div>
+    </div>
     </div><!-- end of container -->
     <script src="app.js"></script>
 </body>
