edited scroll fx

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="containerCover2">
                 <div class="aboutHolder">
             <div id="about">
-                <div onclick="openAbout()" class="pageLinks" id="aboutLink">About</div>
+                <div onclick="scrollDown()" class="pageLinks" id="aboutLink">About</div>
             </div>
             <div id="aboutHideaway">
-                <div onclick="closeAbout()"> </div>
+                <div > </div>
                 <!-- <p>Hello, Im Destin, a firefighter turned programmer with a passion for helping and yadddashhhh </p> -->
 
             </div>
@@ -43,7 +43,7 @@
             <div class="contactHolder">
                 <div id="contact">
 
-                    <div onclick="openInfo()" class="pageLinks" id="contactLink">Contact Me</div>
+                    <div onclick="scrollDown()" class="pageLinks" id="contactLink">Contact Me</div>
                 </div>
                 <div id="contactHideaway">
                     <!-- <div onclick="closeInfo()"> </div>
